<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wish</string>
    <string name="app_desc">Shopping Made Fun</string>
    
    <string name="logo_wish_desc">This is a logo of Wish</string>
    
    <string name="action_help">Help</string>
    <string name="action_help_toast">Action help selected</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_toast">Action settings selected</string>
    <string name="action_search">Search</string>
    <string name="action_search_toast">Action search selected</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_refresh_toast">Action refresh selected</string>
    <string name="action_notifications">Noti</string>
    <string name="action_notifications_toast">Action notifications selected</string>
    
    <string name="action_backhome">Back Home</string>
    
    <string name="title_section1">Home</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Friends</string>
    <string name="title_section4">More</string>
    
    <string name="item_image_desc">Thumb Image</string>
    <string name="item_wish_button">Wish</string>
    <string name="item_recommend_button">Recommend</string>
    
    <string name="more_settings">SETTINGS</string>
    <string name="more_info">INFO</string>
    <string name="more_invite">INVITE</string>
    
    <string name="detail_item_action_share">Share</string>
    <string name="detail_item_action_share_toast">Action share selected</string>
    <string name="detail_item_action_wish_not">Wishe</string>
    <string name="detail_item_action_reply">Reply</string>
	<string name="detail_item_action_recommend">Recommend</string>
	<string name="detail_item_action_info">Info</string>
        
    
	<string-array name="dump_friends_array">
	    <item>Kevin Cho</item>
	    <item>Eddie Choe</item>
	    <item>John Bae</item>
	    <item>Erin Lee</item>
	    <item>Sean Kim</item>
	    <item>Christy Kim</item>
	    <item>Michael Baeg</item>
	    <item>Alex Chung</item>
	    <item>Bruce Park</item>
	    <item>Wish CS</item>
	    <item>Android inc</item>
   	</string-array>
</resources>