<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/detail_item_action_share"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:title="@string/detail_item_action_share"/>
    <item
        android:id="@+id/detail_item_action_wish_not"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/detail_item_action_wish_not"
        android:title="@string/detail_item_action_wish_not"/>
    <item
        android:id="@+id/detail_item_action_reply"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/detail_item_action_wish_not"
        android:title="@string/detail_item_action_reply"/>
    <item
        android:id="@+id/detail_item_action_recommend"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/detail_item_action_wish_not"
        android:title="@string/detail_item_action_recommend"/>
    <item
        android:id="@+id/detail_item_action_info"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/detail_item_action_wish_not"
        android:title="@string/detail_item_action_info"/>
</menu>