<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/action_notifications"
        android:title="@string/action_notifications"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/action_search"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/action_refresh"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/action_settings"
        android:title="@string/action_settings"/>
    
</menu>