<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/item_grid_stroke"
    android:gravity="center"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/item_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_margin="3dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/item_image_desc"
        android:onClick="clickItem"
        android:scaleType="fitXY" />

	<LinearLayout
	    android:id="@+id/item_buttons_layout"
	    android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@drawable/item_buttons"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/item_wish_button"
            android:textSize="12sp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clickWish"
            android:text="@string/item_wish_button" />

        <Button
            android:id="@+id/item_recommend_button"
            android:textSize="12sp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clickRecommend"
            android:text="@string/item_recommend_button" />
        	
	</LinearLayout>

</LinearLayout>